CSS Remove margin 0 on p in rich text submission fields. Hard to read if text to dence. Correct styling of uoload button on submission forms, text and arrow was overlapping.

--- a/opentech/static_src/src/sass/apply/components/_form.scss
+++ b/opentech/static_src/src/sass/apply/components/_form.scss
@@ -95,7 +95,7 @@
             @include button($color--light-blue, $color--dark-blue);
             max-width: 290px;
             text-align: center;
-            background: url('./../../images/upload.svg') $color--light-blue no-repeat 50px center;
+            background: url('./../../images/upload.svg') $color--light-blue no-repeat 40px center;
             border: 0;
 
             .no-js & {
@@ -103,7 +103,7 @@
             }
 
             &:hover {
-                background: url('./../../images/upload.svg') $color--dark-blue no-repeat 50px center;
+                background: url('./../../images/upload.svg') $color--dark-blue no-repeat 40px center;
 
                 .no-js & {
                     background: none;
