--- a/opentech/static_src/src/sass/apply/components/_rich-text.scss
+++ b/opentech/static_src/src/sass/apply/components/_rich-text.scss
@@ -6,7 +6,6 @@
             margin: 0 0 1rem;
         }
 
-        p,
         h5 {
             margin: 0;
         }
